Ajout de logger sur les controller avec un peu de refactorisation et de lint